# syndit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: syndit.rb
crates/agent-core/: Cargo.toml
crates/agent-core/src/: envelope.rs  identity.rs  lib.rs  registry_sig.rs  signing.rs
crates/agent-runtime/: Cargo.toml  build.rs
crates/agent-runtime/src/: config.rs  inbound.rs  mailbox.rs  main.rs  mcp.rs  peer_client.rs  registry_client.rs  tunnel.rs
crates/syndit-cli/: Cargo.toml
crates/syndit-cli/src/: client.rs  config.rs  main.rs  util.rs
crates/syndit-cli/src/commands/: deregister.rs  init.rs  list.rs  mod.rs  register.rs  resolve.rs  whoami.rs
crates/syndit-cli/src/commands/agent/: create.rs  mod.rs
crates/syndit-cli/src/commands/agent/clients/: claude.rs  cursor.rs  mod.rs  print.rs
docs/: network.md
proto/: registry.proto
