[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
if-addrs = "0.13"
tower-http = { version = "0.6", features = ["cors"] }
dialoguer = "0.11"
