[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
base64.workspace = true
sha2.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
