[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-runtime"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
reqwest.workspace = true
uuid.workspace = true
if-addrs.workspace = true
ed25519-dalek.workspace = true
async-trait.workspace = true
