[package]
name = "syndit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "syndit"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { workspace = true }
clap.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
dirs.workspace = true
open = "5"
